[project]
name = "storytelling-devasmita"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "groq>=0.33.0",
    "imageio>=2.37.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.3",
    "moviepy>=1.0.3",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
]
